# deccenc

./: .gitignore  .travis.yml  BUILD  CLEAN  CMakeLists.txt  Makefile.am  README.md  TODO  build.sh  configure.ac  leak_check.sh
.github/workflows/: build.yml
common/: Makefile.am  memutil.h  rtypes.h
component/: CMakeLists.txt  Makefile.am  any_data.c  any_data.h
component/inc/: component.h  singular_component.h
component/src/: component.cpp  singular_component.cpp
logger/: CMakeLists.txt  Makefile.am  logger_api.h
logger/clogger/: Makefile.am  clogger.c  clogger.h  clogger_test.c
logger/flogger/: Makefile.am  flogger.c  flogger.h  flogger_test.c
logger/inc/: logger.h
logger/rlogger/: Makefile.am  rlogger.c  rlogger.h  rlogger_test.c
logger/src/: logger.cpp
logger/syslogger/: Makefile.am  syslogger.c  syslogger.h  syslogger_test.c
media/: CMakeLists.txt  Makefile.am  media.c  media.h  media_par.h
media/inc/: media.h  media_par.h
media/src/: media.cpp
test/: CMakeLists.txt
test/logger_test/: CMakeLists.txt
test/logger_test/src/: main.cpp
test/media_test/: CMakeLists.txt
test/media_test/src/: main.cpp
traceme/: CMakeLists.txt  traceme.h
traceme/inc/: traceme.h
traceme/src/: traceme.cpp
util/: CMakeLists.txt  Makefile.am
util/random/inc/: random.h
util/random/src/: random.cpp
util/string/: Makefile.am  t_string.c  t_string.h
util/time/: Makefile.am  t_utility.c  t_utility.h
